# fin-regbase

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  design.md  mcp-design.md  website-design.md  website-execution-plan.md
.claude/: settings.json
docs/: phase1-decision-log.md  phase2-validation-log.md  phase3-validation-log.md
evals/: questions.yaml  run_content.py  run_retrieval.py
evals/results/: content_20260428_101136.json  content_20260428_103409.json  content_20260428_104436.json  content_20260428_104946.json  content_20260428_105226.json  content_20260428_105824.json  content_20260428_110324.json  content_20260428_111113.json  content_20260428_112713.json  content_20260428_113731.json  content_20260428_114448.json  content_20260428_114821.json  content_20260428_120418.json  content_20260428_121407.json  content_20260428_121625.json  content_20260428_145955.json  content_20260428_150729.json  content_20260428_151021.json  content_20260428_152830.json  content_20260428_154709.json  content_20260428_160220.json  retrieval_20260420_113502.json  retrieval_20260420_150824.json  retrieval_20260420_150959.json  retrieval_20260420_151549.json
finregbase-web/: package-lock.json  package.json
finregbase-web/app/: globals.css  layout.tsx  page.tsx
finregbase-web/components/: ConnectSection.tsx  CoverageGrid.tsx  DemoPlaceholder.tsx  FooterCTA.tsx  HeroSection.tsx  NavBar.tsx  PillarCards.tsx
finregbase-web/lib/: changelog.ts  config-snippets.ts  site-metrics.ts
mcp-server/: README.md  pyproject.toml  search.py  server.py  wiki_index.py
wiki/: index.md  log.md
(+167 files in other folders)
